# VeloGuard

./: LICENSE  README.md  analysis_options.yaml  config.yaml  ffigen.yaml  flutter_rust_bridge.yaml  pubspec.yaml
.kiro/specs/android-rust-bridge-fix/: design.md  requirements.md  tasks.md
.kiro/specs/rust-codebase-optimization/: design.md  requirements.md  tasks.md
android/: gradle.properties
android/app/: build.gradle.kts
docs/: ENHANCEMENT_PLAN.md
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/src/l10n/: app_localizations.dart
lib/src/providers/: app_state_provider.dart  dns_settings_provider.dart  general_settings_provider.dart  locale_provider.dart  network_settings_provider.dart  profiles_provider.dart  proxies_provider.dart  theme_provider.dart
lib/src/rust/: api.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  types.dart
lib/src/screens/: advanced_config_screen.dart  basic_config_screen.dart  connections_screen.dart  dns_settings_screen.dart  home_screen.dart  logs_screen.dart  network_settings_screen.dart  profiles_screen.dart  proxies_screen.dart  settings_screen.dart
lib/src/services/: config_converter.dart  platform_proxy_service.dart  storage_service.dart
lib/src/theme/: app_theme.dart
lib/src/utils/: animation_utils.dart  device_info_utils.dart  (+2 more)
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
ohos/: .gitignore  README.md  build-profile.json5  oh-package.json5
ohos/AppScope/: app.json5
ohos/entry/: obfuscation-rules.txt  oh-package.json5
ohos/flutter_module/: oh-package.json5
ohos/har/: .gitkeep
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/console-subscriber/: Cargo.toml
rust/console-subscriber/src/: lib.rs
rust/tokio-veloguard-tls/: Cargo.toml
rust/tokio-veloguard-tls/src/: client.rs  lib.rs  server.rs  tls12.rs  tls13.rs  tokio.rs
rust/tuic/: Cargo.toml
rust/tuic-quinn/: Cargo.toml
rust/tuic-quinn/src/: lib.rs
rust/tuic/src/: lib.rs
rust/unix-udp-sock/: Cargo.toml
rust/unix-udp-sock/src/: lib.rs
rust/veloguard-bin/: Cargo.toml
rust/veloguard-bin/src/: main.rs
rust/veloguard-boringtun/: Cargo.toml
rust/veloguard-boringtun/src/: crypto.rs  device.rs  handshake.rs  lib.rs  peer.rs
rust/veloguard-core/: Cargo.toml
rust/veloguard-core/src/: api.rs  config.rs  connection_pool.rs  connection_tracker.rs  dispatcher.rs  dns.rs  error.rs  geoip.rs  health_check.rs  inbound.rs  jaeger_tracing.rs  lib.rs  logging.rs  macros.rs  netstack.rs  outbound.rs  process.rs  provider_updater.rs  proxy.rs  proxy_provider.rs  routing.rs  rule_provider.rs  socket_protect.rs  time_sync.rs  tls.rs  traffic_stats.rs
rust/veloguard-core/src/config/: validator.rs  veloguard_compat.rs
rust/veloguard-core/src/inbound/: dokodemo.rs  http.rs  mixed.rs  shadowsocks.rs  socks5.rs  trojan.rs  vless.rs  vmess.rs
rust/veloguard-core/src/outbound/: direct.rs  http.rs  hysteria2.rs  reject.rs  selector.rs  shadowsocks.rs  socks5.rs  trojan.rs  tuic.rs  vless.rs  vmess.rs  wireguard.rs
rust/veloguard-core/src/tests/: mod.rs  property_tests.rs
rust/veloguard-core/src/transport/: grpc.rs  h2.rs  mkcp.rs  mod.rs  mux.rs  tcp.rs  websocket.rs
rust/veloguard-dns/: Cargo.toml
rust/veloguard-dns/src/: bogon.rs  cache.rs  client.rs  config.rs  doh.rs  doh_server.rs  dot.rs  dot_server.rs  error.rs  fake_ip.rs  hosts.rs  lib.rs  manager.rs  resolver.rs  server.rs
rust/veloguard-dns/src/tests/: mod.rs  property_tests.rs
rust/veloguard-lib/: Cargo.toml
rust/veloguard-lib/src/: android_jni.rs  api.rs  error.rs  frb_generated.rs  lib.rs  logging.rs  types.rs
rust/veloguard-netstack/: Cargo.toml
rust/veloguard-netstack/src/: android_tun.rs  android_vpn.rs  error.rs  lib.rs  route.rs  stack.rs  tcp.rs  tun.rs  udp.rs  windows_route.rs  windows_vpn.rs  wintun_embed.rs
rust/veloguard-netstack/src/dns/: cache.rs  doh.rs  dot.rs  error.rs  fake_ip.rs  mod.rs  resolver.rs  server.rs
rust/veloguard-netstack/src/solidtcp/: device.rs  dns.rs  mod.rs  nat.rs  packet.rs  stack.rs  stats.rs  tcp.rs  udp.rs
rust/veloguard-protocol/: Cargo.toml
rust/veloguard-protocol/src/: address.rs  error.rs  lib.rs
rust/veloguard-protocol/src/quic/: address.rs  client.rs  config.rs  crypto.rs  error.rs  mod.rs  protocol.rs  server.rs  session.rs  socks5.rs  stream.rs
rust/veloguard-protocol/src/tls/: client.rs  config.rs  error.rs  mod.rs  server.rs  stream.rs  verifier.rs
rust/veloguard-protocol/src/transport/: error.rs  grpc.rs  h2.rs  mod.rs  tls.rs  websocket.rs
rust/veloguard-protocol/src/tuic/: mod.rs
rust/veloguard-protocol/src/tuic-quinn/: mod.rs
rust/veloguard-protocol/src/wireguard/: crypto.rs  device.rs  handshake.rs  mod.rs  peer.rs
rust/veloguard-quic/: Cargo.toml
rust/veloguard-quic/src/: address.rs  client.rs  config.rs  crypto.rs  error.rs  lib.rs  protocol.rs  server.rs  session.rs  socks5.rs  stream.rs
rust/veloguard-rustls/: Cargo.toml
rust/veloguard-rustls/src/: client.rs  config.rs  connection.rs  crypto.rs  error.rs  handshake.rs  lib.rs  record.rs  server.rs  stream.rs  tls12.rs  tls13.rs  tokio.rs  x509.rs
rust/veloguard-sock2proc/: Cargo.toml
rust/veloguard-sock2proc/src/: lib.rs  utils.rs
rust/veloguard-sock2proc/src/platform/: linux.rs  macos.rs  windows.rs
rust/veloguard-solidtcp/: Cargo.toml
rust/veloguard-solidtcp/src/: device.rs  dns.rs  error.rs  lib.rs  nat.rs  packet.rs  stack.rs  stats.rs  tcp.rs  udp.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_veloguard.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_veloguard.podspec
rust_builder/windows/: CMakeLists.txt
scripts/: generate_icons.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+32 files in other folders)
