[workspace]
resolver = "3"
members = [
    "veloguard-core",
    "veloguard-dns",
    "veloguard-lib",
    "veloguard-netstack",
    "veloguard-rustls",
    "tokio-veloguard-tls",
    "veloguard-bin",
    "veloguard-sock2proc",
    "unix-udp-sock",
    "veloguard-boringtun",
    "veloguard-quic",
    "console-subscriber",
    "tuic",
    "tuic-quinn",
    "veloguard-solidtcp",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[workspace.dependencies]
tokio = { version = "1.43", features = ["full"] }
tokio-util = { version = "0.7", features = ["net", "codec", "io", "compat"] }
futures = "0.3"
async-recursion = "1"
async-trait = "0.1"

hyper = { version = "1", features = ["http1", "http2", "client", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "client-legacy"] }
h2 = "0.4"
http = "1"
http-body-util = "0.1"
socket2 = { version = "0.6", features = ["all"] }
tokio-tungstenite = "0.28"

tokio-veloguard-tls = { path = "tokio-veloguard-tls" }
veloguard-rustls = { path = "veloguard-rustls" }
webpki-roots = "1.0"
rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }
rustls-pemfile = "2.2"
rustls-native-certs = "0.8"

thiserror = "2"
anyhow = "1"
pin-project-lite = "0.2"

time = { version = "0.3", features = ["macros", "local-offset"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "local-time"] }
tracing-appender = "0.2"
tracing-log = "0.2"

tracing-chrome = "0.7"
opentelemetry = "0.31"
opentelemetry-otlp = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
tracing-opentelemetry = "0.32"
opentelemetry-semantic-conventions = { version = "0.31", features = ["semconv_experimental"] }

url = "2"
bytes = "1"
ipnet = "2"
regex = "1"
byteorder = "1"
lru = "0.12"
lru_time_cache = "0.11"
uuid = { version = "1", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
network-interface = "2"
base64 = "0.22"
zstd = "0.13"
portable-atomic = { version = "1", features = ["serde"] }
once_cell = "1.21"
parking_lot = "0.12"
dashmap = "6.1"
hex = "0.4"
cidr = "0.3"

serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
erased-serde = "0.4"

prost = "0.14"
tower = { version = "0.5", features = ["util"] }
libc = "0.2"
ip_network_table-deps-treebitmap = "0.5"

crc32fast = "1"
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
md-5 = "0.10"
chacha20poly1305 = { version = "0.10", features = ["std"] }
aead = { version = "0.5", features = ["std"] }
aes = "0.8"
aes-gcm = "0.10"
cfb-mode = "0.8"
const-fnv1a-hash = "1.1.0"
hkdf = "0.12"

filetime = "0.2"
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }
chrono = { version = "0.4", features = ["serde"] }

tun-rs = { version = "2", features = ["async", "async_framed"] }
smoltcp = { version = "0.12", default-features = false, features = ["std", "log", "medium-ip", "proto-ipv4", "proto-ipv6", "socket-udp", "socket-tcp"], git = "https://github.com/smoltcp-rs/smoltcp.git", rev = "ac32e64" }

veloguard-boringtun = { path = "veloguard-boringtun" }

educe = "0.6"

hickory-client = { version = "0.25", default-features = false }
hickory-resolver = { version = "0.25", default-features = false, features = ["tokio"] }
hickory-proto = { version = "0.25", default-features = false }

dhcproto = "0.14"
ring-compat = { version = "0.8", features = ["aead"] }
ring = { version = "0.17", features = ["std"] }
webpki = "0.22"

rand = "0.9"

shadowsocks = { version = "1.23", features = ["aead-cipher-2022", "stream-cipher"] }
maxminddb = "0.27"
public-suffix = "0.1"
murmur3 = "0.5"

arti-client = { version = "0.37", default-features = false, features = ["tokio", "rustls", "static-sqlite"] }
tor-rtcompat = { version = "0.37", default-features = false }

tuic = { path = "tuic" }
tuic-quinn = { path = "tuic-quinn" }
register-count = "0.1"

quinn = { version = "0.11", default-features = false, features = ["futures-io", "runtime-tokio", "rustls"] }
quinn-proto = { version = "0.11", default-features = false }

h3 = "0.0.8"
h3-quinn = "0.0.10"

blake2 = "0.10"
digest = "0.10"

console-subscriber = { path = "console-subscriber" }

criterion = { version = "0.8", features = ["html_reports", "async_tokio"] }
memory-stats = "1.0"

signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
num_cpus = "1"

russh = { version = "0.55", default-features = false, features = ["async-trait"] }
dirs = "6.0"
totp-rs = { version = "5.7", features = ["serde_support"] }

veloguard-quic = { path = "veloguard-quic" }

downcast-rs = "2.0"

# aws-lc-rs 在 Windows 上编译需要 NASM，保留定义但不默认启用
aws-lc-rs = { version = "1", default-features = false, features = ["prebuilt-nasm"] }

flutter_rust_bridge = "=2.11.1"

x25519-dalek = "2.0.1"
curve25519-dalek = "4.1.3"
zeroize = "1.8"
bincode = "1.3"

veloguard-core = { path = "veloguard-core" }
veloguard-dns = { path = "veloguard-dns" }
veloguard-netstack = { path = "veloguard-netstack" }
veloguard-lib = { path = "veloguard-lib" }
veloguard-solidtcp = { path = "veloguard-solidtcp" }

tempfile = "3.20"
mockall = "0.14"
tokio-test = "0.4"
axum-macros = "0.5"
bollard = "0.19"
serial_test = "3.2"
env_logger = "0.11"
rand_chacha = "0.9"
httpmock = "0.8"
tracing-test = "0.2"

rustc_version = "0.4"

veloguard-sock2proc = { path = "veloguard-sock2proc" }
hyperlocal = { version = "0.9", features = ["client"] }
unix-udp-sock = { path = "unix-udp-sock" }
security-framework = "3.5"
tracing-oslog = "0.3"
windows = { version = "0.62", features = [
    "Win32_Networking_WinSock",
    "Win32_Foundation",
    "Win32_NetworkManagement_Rras",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis"
] }

# Wintun bindings for Windows TUN
wintun-bindings = { version = "0.7", features = ["async"] }
zip = "0.6"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "socks"] }

# Additional common dependencies
clap = { version = "4", features = ["derive"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
md5 = "0.7"
getrandom = { version = "0.2", features = ["std"] }
lazy_static = "1.5"


