[workspace]
resolver = "3"
members = [
    "console-subscriber",
    "tokio-veloguard-tls",
    "tuic",
    "tuic-quinn",
    "unix-udp-sock",
    "veloguard-bin",
    "veloguard-boringtun",
    "veloguard-core",
    "veloguard-dns",
    "veloguard-lib",
    "veloguard-netstack",
    "veloguard-quic",
    "veloguard-rustls",
    "veloguard-sock2proc",
    "veloguard-solidtcp",
]

[workspace.package]
edition = "2021"
license = "AGPL-3.0-or-later"
version = "0.1.0"

[workspace.dependencies]
aead = { version = "0.5", features = ["std"] }
aes = "0.8"
aes-gcm = "0.10"
anyhow = "1"
arti-client = { version = "0.37", default-features = false, features = ["tokio", "rustls", "static-sqlite"] }
async-recursion = "1"
async-trait = "0.1"
aws-lc-rs = { version = "1", default-features = false, features = ["prebuilt-nasm"] }
axum = { version = "0.8", features = ["ws"] }
axum-macros = "0.5"

base64 = "0.22"
bincode = "1.3"
blake2 = "0.10"
bollard = "0.19"
byteorder = "1"
bytes = "1"

cfb-mode = "0.8"
chacha20poly1305 = { version = "0.10", features = ["std"] }
chrono = { version = "0.4", features = ["serde"] }
cidr = "0.3"
clap = { version = "4", features = ["derive"] }
console-subscriber = { path = "console-subscriber" }
const-fnv1a-hash = "1.1"
crc32fast = "1"
criterion = { version = "0.6", features = ["html_reports", "async_tokio"] }
curve25519-dalek = "4"

dashmap = "6"
dhcproto = "0.14"
digest = "0.10"
dirs = "6"
downcast-rs = "2"

educe = "0.6"
env_logger = "0.11"
erased-serde = "0.4"

filetime = "0.2"
flutter_rust_bridge = "=2.11.1"
futures = "0.3"

getrandom = { version = "0.3.4", features = ["std"] }

h2 = "0.4"
h3 = "0.0.8"
h3-quinn = "0.0.10"
hex = "0.4"
hickory-client = { version = "0.25", default-features = false }
hickory-proto = { version = "0.25", default-features = false }
hickory-resolver = { version = "0.25", default-features = false, features = ["tokio"] }
hkdf = "0.12"
hmac = "0.12"
http = "1"
http-body-util = "0.1"
httpmock = "0.8"
hyper = { version = "1", features = ["http1", "http2", "client", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "client-legacy"] }
hyperlocal = { version = "0.9", features = ["client"] }

ip_network_table-deps-treebitmap = "0.5"
ipnet = "2"

lazy_static = "1"
libc = "0.2"
lru = "0.14"
lru_time_cache = "0.11"

maxminddb = "0.27"
md-5 = "0.10"
md5 = "0.7"
memory-stats = "1"
mockall = "0.14"
murmur3 = "0.5"

network-interface = "2"

once_cell = "1"
opentelemetry = "0.31"
opentelemetry-otlp = "0.31"
opentelemetry-semantic-conventions = { version = "0.31", features = ["semconv_experimental"] }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }

parking_lot = "0.12"
pin-project-lite = "0.2"
portable-atomic = { version = "1", features = ["serde"] }
prost = "0.14"
public-suffix = "0.1"

quinn = { version = "0.11", default-features = false, features = ["futures-io", "runtime-tokio", "rustls"] }
quinn-proto = { version = "0.11", default-features = false }

rand = "0.9"
rand_chacha = "0.9"
regex = "1"
register-count = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "socks"] }
ring = { version = "0.17", features = ["std"] }
ring-compat = { version = "0.8", features = ["aead"] }
russh = { version = "0.55", default-features = false, features = ["async-trait"] }
rustc_version = "0.4"
rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }
rustls-native-certs = "0.8"
rustls-pemfile = "2"

security-framework = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
serial_test = "3"
sha1 = "0.10"
sha2 = "0.10"
shadowsocks = { version = "1", features = ["aead-cipher-2022", "stream-cipher"] }
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
smoltcp = { version = "0.12", default-features = false, features = ["std", "log", "medium-ip", "proto-ipv4", "proto-ipv6", "socket-udp", "socket-tcp"], git = "https://github.com/smoltcp-rs/smoltcp.git", rev = "ac32e64" }
socket2 = { version = "0.6", features = ["all"] }
sysinfo = "0.37.2"

tempfile = "3"
thiserror = "2"
time = { version = "0.3", features = ["macros", "local-offset"] }
tokio = { version = "1", features = ["full"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
tokio-test = "0.4"
tokio-tungstenite = "0.28"
tokio-util = { version = "0.7", features = ["net", "codec", "io", "compat"] }
tokio-veloguard-tls = { path = "tokio-veloguard-tls" }
tor-rtcompat = { version = "0.37", default-features = false }
totp-rs = { version = "5", features = ["serde_support"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-chrome = "0.7"
tracing-log = "0.2"
tracing-opentelemetry = "0.32"
tracing-oslog = "0.3"
tracing-subscriber = { version = "0.3", features = ["env-filter", "local-time"] }
tracing-test = "0.2"
tuic = { path = "tuic" }
tuic-quinn = { path = "tuic-quinn" }
tun-rs = { version = "2", features = ["async", "async_framed"] }

unix-udp-sock = { path = "unix-udp-sock" }
url = "2"
uuid = { version = "1", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }

veloguard-boringtun = { path = "veloguard-boringtun" }
veloguard-core = { path = "veloguard-core" }
veloguard-dns = { path = "veloguard-dns" }
veloguard-lib = { path = "veloguard-lib" }
veloguard-netstack = { path = "veloguard-netstack" }
veloguard-quic = { path = "veloguard-quic" }
veloguard-rustls = { path = "veloguard-rustls" }
veloguard-sock2proc = { path = "veloguard-sock2proc" }
veloguard-solidtcp = { path = "veloguard-solidtcp" }

webpki = "0.22"
webpki-roots = "1"
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_NetworkManagement_Rras",
    "Win32_Networking_WinSock",
] }
wintun-bindings = { version = "0.7", features = ["async"] }

x25519-dalek = "2"

zeroize = "1"
zip = "2"
zstd = "0.13"
