[package]
name = "console-subscriber"
version = "0.5.0"
edition.workspace = true
license.workspace = true

[dependencies]
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
