[package]
name = "tokio-veloguard-tls"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "tokio_veloguard_tls"

[dependencies]
tokio = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
ring = { workspace = true }
webpki = { workspace = true }
rustls-pemfile = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
veloguard-rustls = { workspace = true }

[features]
default = []
ring = []
aws-lc-rs = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
