[package]
name = "tuic-quinn"
version = "1.5.2"
edition.workspace = true
license.workspace = true

[dependencies]
bytes = { workspace = true }
futures = { workspace = true }
quinn = { workspace = true }
rustls = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tuic = { workspace = true }
