[package]
name = "tuic"
version = "1.5.2"
edition.workspace = true
license.workspace = true

[dependencies]
quinn = { workspace = true }
rustls = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
bincode = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
