[package]
name = "tuic"
version = "1.5.2"
edition.workspace = true
license.workspace = true

[dependencies]
bincode = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
quinn = { workspace = true }
rustls = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
