[package]
name = "veloguard-bin"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "veloguard"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
veloguard-core = { workspace = true }
clap = { workspace = true }
axum = { workspace = true }

[target.'cfg(unix)'.dependencies]
signal-hook = { workspace = true }
signal-hook-tokio = { workspace = true }
futures = { workspace = true }
