[package]
name = "veloguard-bin"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "veloguard"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
veloguard-core = { workspace = true }

[target.'cfg(unix)'.dependencies]
futures = { workspace = true }
signal-hook = { workspace = true }
signal-hook-tokio = { workspace = true }
