[package]
name = "veloguard-boringtun"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
aws-lc-rs = []
ring = []

[dependencies]
aes-gcm = { workspace = true }
base64 = { workspace = true }
blake2 = { workspace = true }
chacha20poly1305 = { workspace = true }
cidr = { workspace = true }
curve25519-dalek = { workspace = true }
hex = { workspace = true }
hkdf = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
x25519-dalek = { workspace = true }
zeroize = { workspace = true }
