[package]
name = "veloguard-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
h2 = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
socket2 = { workspace = true }
veloguard-rustls = { workspace = true }
tokio-veloguard-tls = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
pin-project-lite = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tower = { workspace = true }
uuid = { workspace = true }
lru = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
url = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
ipnet = { workspace = true }
cidr = { workspace = true }
maxminddb = { workspace = true }
aes-gcm = { workspace = true }
hkdf = { workspace = true }
sha1 = { workspace = true }
md5 = { workspace = true }
getrandom = { workspace = true }
lazy_static = { workspace = true }
veloguard-quic = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
