[package]
name = "veloguard-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aes-gcm = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
cidr = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
getrandom = { workspace = true }
h2 = { workspace = true }
hex = { workspace = true }
hkdf = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
ipnet = { workspace = true }
lazy_static = { workspace = true }
lru = { workspace = true }
maxminddb = { workspace = true }
md5 = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
pin-project-lite = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha1 = { workspace = true }
socket2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-veloguard-tls = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
veloguard-quic = { workspace = true }
veloguard-rustls = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
