[package]
name = "veloguard-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
jaeger = [
    "dep:opentelemetry",
    "dep:opentelemetry-otlp",
    "dep:opentelemetry_sdk",
    "dep:tracing-opentelemetry",
]

[dependencies]
aes-gcm = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
bitflags = { workspace = true }
blake3 = { workspace = true }
bytes = { workspace = true }
chacha20poly1305 = { workspace = true }
chrono = { workspace = true }
cidr = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
getrandom = { workspace = true }
h2 = { workspace = true }
hex = { workspace = true }
hkdf = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
ipnet = { workspace = true }
lazy_static = { workspace = true }
libc = { workspace = true }
lru = { workspace = true }
maxminddb = { workspace = true }
md-5 = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
pin-project-lite = { workspace = true }
quinn = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
rustls = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
socket2 = { workspace = true }
rustls-native-certs = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
tokio-util = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true, optional = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
veloguard-protocol = { workspace = true }

opentelemetry = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_NetworkManagement_Rras",
    "Win32_Networking_WinSock",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
] }

[dev-dependencies]
proptest = { workspace = true }
tokio-test = { workspace = true }
