[package]
name = "veloguard-dns"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "DNS resolver and server for VeloGuard with anti-spoofing support"

[dependencies]
# Async runtime
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# DNS libraries
hickory-proto = { workspace = true }
hickory-resolver = { workspace = true }
hickory-client = { workspace = true }

# TLS for DoT/DoH
tokio-rustls = { workspace = true }
rustls = { workspace = true }
webpki-roots = { workspace = true }

# HTTP for DoH
hyper = { workspace = true }
hyper-util = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }

# Data structures
bytes = { workspace = true }
lru = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }

# Networking
socket2 = { workspace = true }
ipnet = { workspace = true }

# Serialization
serde = { workspace = true }
serde_yaml = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Utilities
rand = { workspace = true }
base64 = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tracing-subscriber = { workspace = true }
