[package]
name = "veloguard-dns"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "DNS resolver and server for VeloGuard with anti-spoofing support"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
hickory-client = { workspace = true }
hickory-proto = { workspace = true }
hickory-resolver = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
ipnet = { workspace = true }
lru = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
socket2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
webpki-roots = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tokio-test = { workspace = true }
tracing-subscriber = { workspace = true }
