[package]
name = "veloguard-netstack"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
embed-wintun = []

[dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
smoltcp = { workspace = true }
ipnet = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
once_cell = { workspace = true }
async-trait = { workspace = true }
pin-project-lite = { workspace = true }
rand = { workspace = true }
lru = { workspace = true }
veloguard-solidtcp = { workspace = true }

# Use veloguard-dns crate for DNS functionality
veloguard-dns = { path = "../veloguard-dns" }

# Additional dependencies for netstack
cidr = { workspace = true }

[target.'cfg(unix)'.dependencies]
tun-rs = { workspace = true }
libc = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true }
wintun-bindings = { workspace = true }
reqwest = { workspace = true }
zip = { workspace = true }
