[package]
name = "veloguard-netstack"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
embed-wintun = []

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
cidr = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
ipnet = { workspace = true }
lru = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
pin-project-lite = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
smoltcp = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
veloguard-dns = { path = "../veloguard-dns" }
veloguard-solidtcp = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }
tun-rs = { workspace = true }

[target.'cfg(windows)'.dependencies]
reqwest = { workspace = true }
windows = { workspace = true }
wintun-bindings = { workspace = true }
zip = { workspace = true }
