[package]
name = "veloguard-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Unified protocol implementations for VeloGuard proxy"

[features]
default = ["quic", "tls", "wireguard", "tuic", "tuic-quinn"]
quic = []
tls = []
wireguard = []
tuic = []
tuic-quinn = []

[dependencies]
aead = { workspace = true }
aes-gcm = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
bincode = { workspace = true }
blake2 = { workspace = true }
bytes = { workspace = true }
chacha20poly1305 = { workspace = true }
cidr = { workspace = true }
curve25519-dalek = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
getrandom = { workspace = true }
h2 = { workspace = true }
hex = { workspace = true }
hkdf = { workspace = true }
hmac = { workspace = true }
http = { workspace = true }
parking_lot = { workspace = true }
pin-project-lite = { workspace = true }
quinn = { workspace = true }
quinn-proto = { workspace = true }
rand = { workspace = true }
ring = { workspace = true }
rustls = { workspace = true }
rustls-native-certs = { workspace = true }
rustls-pemfile = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
socket2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
tokio-tungstenite = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
x25519-dalek = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tokio-test = { workspace = true }
