[package]
name = "veloguard-quic"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "QUIC proxy implementation for VeloGuard with 0-RTT and SNI camouflage"

[dependencies]
aead = { workspace = true }
aes-gcm = { workspace = true }
async-trait = { workspace = true }
blake2 = { workspace = true }
bytes = { workspace = true }
chacha20poly1305 = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
hkdf = { workspace = true }
parking_lot = { workspace = true }
pin-project-lite = { workspace = true }
quinn = { workspace = true }
quinn-proto = { workspace = true }
rand = { workspace = true }
rustls = { workspace = true }
rustls-native-certs = { workspace = true }
rustls-pemfile = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
socket2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
