[package]
name = "veloguard-rustls"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "veloguard_rustls"

[features]
default = []
aws-lc-rs = []
ring = []

[dependencies]
base64 = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
rand = { workspace = true }
ring = { workspace = true }
rustls-pemfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
webpki = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
