[package]
name = "veloguard-solidtcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "High-performance user-space TCP/IP stack for VeloGuard VPN based on smoltcp"
keywords = ["tcp", "ip", "tun", "vpn", "proxy"]

[features]
default = ["ipv4", "ipv6", "tcp", "udp", "icmp", "dns"]
dns = []
icmp = []
ipv4 = []
ipv6 = []
tcp = []
udp = []

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
lru = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
smoltcp = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tracing-subscriber = { workspace = true }
